--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,17 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+a {
+	text-decoration: none;
+	color: #b71c1c;
+	font-weight: 500;
+}
+
+a:hover {
+	text-decoration: dotted;
+	color: #ef5350;
+}
+
 /* 
 Fonts:
 font-family: 'Anton', sans-serif;
