--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+.page-container {
+	position: relative;
+	min-height: 100vh;
+}
+
+.App {
+	padding-bottom: 2.5rem; /* Footer height */
+}
+
 a {
 	text-decoration: none;
 	color: #b71c1c;
